# IntroToCMake

./: .gitmodules  README.md
lab1/: .gitignore
lab1-helloworld/cmake/: xc32.cmake
lab1-helloworld/source/: CMakeLists.txt
lab1/MPLABX/lab1.X/nbproject/: configurations.xml  project.xml
lab1/cmake/: xc32.cmake
lab1/source/: CMakeLists.txt  main.c
lab2/: .gitignore
lab2/MPLABX/lab2.X/nbproject/: configurations.xml  project.xml
lab2/source/: CMakeLists.txt  main.c
lab2/source/bsp/: CMakeLists.txt  led.c  led.h  systick.c  systick.h
